--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,6 @@ img {
   padding-top: 24px;
   padding-bottom: 25px;
   border: 1px solid #ececec;
-  position: relative;
 }
 
 .header .container {
@@ -113,17 +112,18 @@ img {
 
 .header .current {
   color: var(--accent-text-color);
+  position: relative;
 }
 
 .current::after {
-  display: block;
   content: '';
   width: 100%;
   height: 4px;
   border-radius: 2px;
   background-color: currentColor;
   position: absolute;
-  bottom: 0;
+  bottom: -32px;
+  left: 0;
 }
 
 .nav-link-item {
@@ -241,6 +241,54 @@ img {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+/* Modal window */
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal-backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background: var(--main-bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  background: var(--main-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.modal-close-button .icon {
+  width: 18px;
+  height: 18px;
 }
 
 /* PAGE 1 (MAIN)*/
@@ -373,6 +421,30 @@ img {
 .portfolio-main-title,
 .our-team-title {
   margin-bottom: 50px;
+}
+
+.portfolio-main-thumb {
+  position: relative;
+}
+
+.portfolio-main-description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  text-align: center;
+  padding: 27px 0;
+}
+
+.portfolio-main-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-bg-color);
 }
 
 /* Our team section */
@@ -517,15 +589,22 @@ img {
 
 .footer-part-first,
 .footer-social-links {
-  flex-basis: calc((50%-45px) / 2);
+  flex-basis: calc((50% - 45px) / 2);
+}
+
+.footer-form-part {
+  flex-basis: calc(50% - 15px);
 }
 
 .footer .container {
   width: 1200px;
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
   padding-left: 15px;
   padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .footer {
@@ -597,6 +676,15 @@ img {
   background-color: var(--accent-text-color);
 }
 
+.footer-form-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-bg-color);
+}
+
 /* PAGE 2 (PORTFOLIO) */
 
 .portfolio-page {
@@ -651,4 +739,32 @@ img {
   background-color: var(--main-bg-color);
   border: 1px solid #eeeeee;
   padding: 20px 24px;
+}
+
+.portfolio-image-thumb {
+  position: relative;
+}
+
+.portfolio-description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+}
+
+.portfolio-filter-link-item:hover .portfolio-description,
+.portfolio-filter-link-item:focus .portfolio-description {
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 1;
+}
+
+.description-text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  color: var(--main-bg-color);
 }
