--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,20 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  position: relative;
+}
+
+.nav-link-item:hover::after,
+.nav-link-item:focus::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: currentColor;
+  position: absolute;
+  bottom: -32px;
+  left: 0;
+  transform: background-color var(--animation);
 }
 
 .nav-list-item:not(:last-child) {
